<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/bluebgk"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/txtV_welcome"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:text="Welcome to the Dice game!"
        android:textAlignment="center"
        android:textColor="@color/peachbgk"


        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:scaleX="1.3"
        android:scaleY="1.3"

        android:src="@drawable/dicewelcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="428dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtV_chose"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:text="Enter your name below"
            android:textAlignment="center"
            android:textColor="@color/peachbgk"


            android:textSize="20sp" />

        <EditText
            android:id="@+id/eTxtPersonName"
            android:layout_width="250dip"
            android:layout_height="65dp"
            android:backgroundTint="@color/orangebgk"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Player"
            android:textAlignment="center"
            android:textColor="@color/peachbgk"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_newGame"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/orangebgk"
            android:text="@string/new_game"
            android:textColor="@color/peachbgk"
            android:textSize="25sp"
            app:cornerRadius="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <Button
            android:id="@+id/btn_instructions"
            android:layout_width="180dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/orangebgk"
            android:text="@string/instructions"
            android:textColor="@color/peachbgk"
            android:textSize="15sp"
            app:cornerRadius="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <Button
            android:id="@+id/btn_about"
            android:layout_width="153dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/orangebgk"
            android:text="@string/about"
            android:textColor="@color/peachbgk"
            android:textSize="25sp"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="206dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>